@@ -6,6 +6,7 @@ setting since version 1.2.0. If you have it on, turn it *off* if you can.
 == MediaWiki 1.8.1 ==
 
 * Fix PHP notice and estimates for dumpBackup.php and friends
+* (bug 7545) Fix PHP version check on install
 
 
 == MediaWiki 1.8.0 ==
